tests/regression/error/const_not_const.lus
const i = 1;
const a = i -> 0;

node n (x: int) returns (b: bool);
let
  b = true;
  --%PROPERTY true -> a = 1;
tel
